# FormalLanguagesTask2

./: CMakeLists.txt  algo.cpp  algo.h  callback.h  main.cpp  structs.h
